# Star-Game-Engine

./: Cargo.toml  README.md  lots of python.py  package-lock.json
src/: lua.rs  main.rs  mod.rs  rust.rs  splash.rs
src/OBJ_loader_with_OBJ_files/: obj_loader.rs
star_game_engine/: Cargo.toml  package-lock.json
star_game_engine/src/: lua.rs  main.rs  mod.rs  rust.rs  sausage_3d.rs  splash.rs
star_game_engine/src/OBJ_loader_with_OBJ_files/: obj_loader.rs
star_game_engine/src/egui_test/: Cargo.toml
star_game_engine/src/egui_test/src/: main.rs
